...
                ),
                SizedBox(height: 32), //spacing between logo and buttons
                //Login button
                SizedBox(
                  width: 400,
                  child: ElevatedButton(
                    key: ValueKey('loginButton'),
                    style: ElevatedButton.styleFrom(
                      backgroundColor: const Color(0xFFDC945F), //Button color
                      padding: EdgeInsets.symmetric(vertical: 12),
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(8),
                      ),
...
                ),
                SizedBox(height: 16),
                //Sign up button
                SizedBox(
                  width: 400,
                  child: ElevatedButton(
                    key: ValueKey('signupButton'),
                    style: ElevatedButton.styleFrom(
                      backgroundColor: Colors.white, //Button color
                      padding: EdgeInsets.symmetric(vertical: 12),
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(8),
                      ),
...
